exports[`actions > agency generic model actions create should work 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/agency/new-entity-id",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`actions > agency generic model actions delete should work 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`actions > agency generic model actions update should work 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/agency/agency-1",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;
